[package]
name = "subnetter"
version = "1.2.0"
edition = "2021"
authors= ["cr4yfish", "codinghusi"]
repository= "https://github.com/cr4yfish/subnetter-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
wasm-bindgen = "0.2.81"

[build]
target = "wasm32-unknown-unknown"